@@ -1,12 +1,13 @@
 package ar.edu.unq.po2.tp.Final;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class FiltroTitulo extends Filtro {
 
 	@Override
 	public List<Proyecto> filtrar(List<Proyecto> proyectos, PreferenciaDeProyecto preferencia) { 
-           List<Proyecto> proyectosDePreferencia = proyectos.stream().filter(p -> preferencia.isTituloDePreferencia(p)).toList();
+           List<Proyecto> proyectosDePreferencia = proyectos.stream().filter(p -> preferencia.isTituloDePreferencia(p)).collect(Collectors.toList());
            return proyectosDePreferencia; 
 	}
 
@@ -14,7 +15,7 @@ public class FiltroTitulo extends Filtro {
 	public void agregarFiltro(Filtro filtro) {
 		FiltroCompuesto compuesto = new FiltroAnd(); //por default
 		compuesto.agregarFiltro(filtro);
-		
+		<<Correcion>> Este mensaje no hace nada. Crea un objeto FiltroCompueto pero no lo retorna. Este objeto queda perdido en la memoria.
 	}
 
 }
